Update style.css: navbar 3 gap fixed
gap between navbar1 & 3 while scrolling as navbar 3 sticks to navbar 1 is fixed by making top from 13.5% to 13%

--- a/style.css
+++ b/style.css
@@ -619,6 +619,6 @@ li {
 
 .navbar3{
     position: sticky;
-    top: 13.5%;
+    top: 13%;
     z-index: 1000;
 }
